# phpLiteLinux

./: .gitignore  CMakeLists.txt  Readme.MD
phpLiteUI/: neutralino.config.json
src/: json.o.deps  main.cpp  main.o.deps  mongoose.c  mongoose.h  mongoose_server.cpp  mongoose_server.h  settings.cpp  settings.h  utils.cpp  utils.h
